create basic token handler to work off of
